--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
         <script src="javascript.js" defer></script>
     </head>
     <body>
-        
+        <form action="" method="post">
+            <label for="firstName">First Name</label>
+            <input type="text" id="firstName" name="firstName">
+
+            <label for="lastName">Last Name</label>
+            <input type="text" id="lastName" name="lastName">
+
+            <label for="userEmail">Email</label>
+            <input type="email" id="userEmail" name="userEmail">
+
+            <label for="phoneNumber">Phone Number</label>
+            <input type="text" id="phoneNumber" name="phoneNumber">
+
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password">
+
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" id="confirmPassword" name="confirmPassword">
+        </form>
     </body>
 </html>
