Display submit button and change phone input type
A basic submit button is displayed and the phone number input type was
changed from text to tel.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
             <input type="email" id="userEmail" name="userEmail">
 
             <label for="phoneNumber">Phone Number</label>
-            <input type="text" id="phoneNumber" name="phoneNumber">
+            <input type="tel" id="phoneNumber" name="phoneNumber">
 
             <label for="password">Password</label>
             <input type="password" id="password" name="password">
 
             <label for="confirmPassword">Confirm Password</label>
             <input type="password" id="confirmPassword" name="confirmPassword">
+
+            <button type="submit">Create Account</button>
         </form>
     </body>
 </html>
