--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
     </head>
     <body>
         <form action="" method="post">
-            <label for="firstName">First Name</label>
-            <input type="text" id="firstName" name="firstName">
+            <p>All required fields marked with * are required</p>
+            
+            <label for="firstName">First Name *</label>
+            <input type="text" id="firstName" name="firstName" required>
 
-            <label for="lastName">Last Name</label>
-            <input type="text" id="lastName" name="lastName">
+            <label for="lastName">Last Name *</label>
+            <input type="text" id="lastName" name="lastName" required>
 
-            <label for="userEmail">Email</label>
-            <input type="email" id="userEmail" name="userEmail">
+            <label for="userEmail">Email *</label>
+            <input type="email" id="userEmail" name="userEmail" required>
 
             <label for="phoneNumber">Phone Number</label>
             <input type="tel" id="phoneNumber" name="phoneNumber">
 
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password">
+            <label for="password">Password *</label>
+            <input type="password" id="password" name="password" required>
 
-            <label for="confirmPassword">Confirm Password</label>
-            <input type="password" id="confirmPassword" name="confirmPassword">
+            <label for="confirmPassword">Confirm Password *</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" required>
 
             <button type="submit">Create Account</button>
         </form>
