--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="javascript.js" defer></script>
     </head>
     <body>
-        <form action="" method="post">
+        <form action="" method="post" onsubmit="return checkPasswordsMatch();">
             <p>All required fields marked with * are required</p>
 
             <label for="firstName">First Name *</label>
@@ -24,6 +24,7 @@
 
             <label for="password">Password *</label>
             <input type="password" id="password" name="password" required>
+            <p></p>
 
             <label for="confirmPassword">Confirm Password *</label>
             <input type="password" id="confirmPassword" name="confirmPassword" required>
