--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
 
             <button type="submit">Create Account</button>
         </form>
+        <!-- <footer>https://unsplash.com/photos/rkaahInFlBg</footer> -->
     </body>
 </html>
