--- a/index.html
+++ b/index.html
@@ -32,5 +32,5 @@
             <button type="submit">Create Account</button>
         </form>
     </body>
-    <!-- <footer>https://unsplash.com/photos/rkaahInFlBg</footer> -->
+    <footer>Photo by <a href="https://unsplash.com/@igorbumba">Igor Bumba</a> on <a href="https://unsplash.com/">Unsplash</a></footer>
 </html>
