Edit footer formatting and create left container
The div for the logo container needed to be created so the footer was
moved into a left container with the logo container. The footer was
made to stick at the bottom of the page once more and the logo container
was placed where desired on the left half of the page.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 
             <button type="submit">Create Account</button>
         </form>
+
+        <div class="leftContainer">
+            <div class="logoContainer">
+                Avenger's Initiative
+            </div>
+            <footer>Photo by <a href="https://unsplash.com/@igorbumba">Igor Bumba</a> on <a href="https://unsplash.com/">Unsplash</a></footer>
+        </div>
     </body>
-    <footer>Photo by <a href="https://unsplash.com/@igorbumba">Igor Bumba</a> on <a href="https://unsplash.com/">Unsplash</a></footer>
 </html>
