Add description paragraph and heading on form
Some text was added on the form to give the user a description
of what they are signing up for.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <form action="" method="post" onsubmit="return checkPasswordsMatch();">
+            <h1>Avengers, assemble.</h1>
+            <p>A shield of armor around the world. Do you think you're stronger than the Hulk, smarter than Tony Stark, more accurate than Hawkeye? Think you have what it takes to join earth's mightiest heros? Sign up today.</p></p>
+
             <p>All required fields marked with * are required</p>
 
             <div class="input">
