Format right container into flexbox
The right container was edited to allow 2 separate containers for
the submit button and the input section of the form.

--- a/index.html
+++ b/index.html
@@ -8,43 +8,40 @@
     </head>
     <body>
         <form action="" method="post" onsubmit="return checkPasswordsMatch();">
-            <h1>Avengers, assemble.</h1>
-            <p>A shield of armor around the world. Do you think you're stronger than the Hulk, smarter than Tony Stark, more accurate than Hawkeye? Think you have what it takes to join earth's mightiest heros? Sign up today.</p></p>
-
-            <p>All required fields marked with * are required</p>
-
-            <div class="input">
-                <label for="firstName">First Name *</label>
-                <input type="text" id="firstName" name="firstName" required>
+            <div class="topRightContainer">
+                <h1>Avengers, assemble.</h1>
+                <p>A shield of armor around the world. Do you think you're stronger than the Hulk, smarter than Tony Stark, more accurate than Hawkeye? Think you have what it takes to join earth's mightiest heros? Sign up today.</p></p>
+                <p>All required fields marked with * are required</p>
+                <div class="input">
+                    <label for="firstName">First Name *</label>
+                    <input type="text" id="firstName" name="firstName" required>
+                </div>
+                <div class="input">
+                    <label for="lastName">Last Name *</label>
+                    <input type="text" id="lastName" name="lastName" required>
+                </div>
+                <div class="input">
+                    <label for="userEmail">Email *</label>
+                    <input type="email" id="userEmail" name="userEmail" required>
+                </div>
+                <div class="input">
+                    <label for="phoneNumber">Phone Number</label>
+                    <input type="tel" id="phoneNumber" name="phoneNumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="Please input a valid telephone number with dashes, ex: 123-456-7890">
+                </div>
+                <div class="input">
+                    <label for="password">Password *</label>
+                    <input type="password" id="password" name="password" required>
+                    <p></p>
+                </div>
+                <div class="input">
+                    <label for="confirmPassword">Confirm Password *</label>
+                    <input type="password" id="confirmPassword" name="confirmPassword" required>
+                </div>
             </div>
 
-            <div class="input">
-                <label for="lastName">Last Name *</label>
-                <input type="text" id="lastName" name="lastName" required>
+            <div class="buttonContainer">
+                <button type="submit">Create Account</button>
             </div>
-
-            <div class="input">
-                <label for="userEmail">Email *</label>
-                <input type="email" id="userEmail" name="userEmail" required>
-            </div>
-
-            <div class="input">
-                <label for="phoneNumber">Phone Number</label>
-                <input type="tel" id="phoneNumber" name="phoneNumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="Please input a valid telephone number with dashes, ex: 123-456-7890">
-            </div>
-
-            <div class="input">
-                <label for="password">Password *</label>
-                <input type="password" id="password" name="password" required>
-                <p></p>
-            </div>
-
-            <div class="input">
-                <label for="confirmPassword">Confirm Password *</label>
-                <input type="password" id="confirmPassword" name="confirmPassword" required>
-            </div>
-
-            <button type="submit">Create Account</button>
         </form>
 
         <div class="leftContainer">
