Add placeholders to input fields
Placeholders were given to the input fields to direct the user to what
valid input would look like.

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
                 <p>All required fields marked with * are required</p>
                 <div class="input">
                     <label for="firstName">First Name *</label>
-                    <input type="text" id="firstName" name="firstName" required>
+                    <input type="text" id="firstName" name="firstName" placeholder='Steve' required>
                 </div>
                 <div class="input">
                     <label for="lastName">Last Name *</label>
-                    <input type="text" id="lastName" name="lastName" required>
+                    <input type="text" id="lastName" name="lastName" placeholder='Rogers' required>
                 </div>
                 <div class="input">
                     <label for="userEmail">Email *</label>
-                    <input type="email" id="userEmail" name="userEmail" required>
+                    <input type="email" id="userEmail" name="userEmail" placeholder='steverogers@avengers.net' required>
                 </div>
                 <div class="input">
                     <label for="phoneNumber">Phone Number</label>
-                    <input type="tel" id="phoneNumber" name="phoneNumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="Please input a valid telephone number with dashes, ex: 123-456-7890">
+                    <input type="tel" id="phoneNumber" name="phoneNumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder='123-456-7890' title="Please input a valid telephone number with dashes, ex: 123-456-7890">
                 </div>
                 <div class="input">
                     <label for="password">Password *</label>
