--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="topRightContainer">
                 <h1>Avengers, assemble.</h1>
                 <p>A shield of armor around the world. Do you think you're stronger than the Hulk, smarter than Tony Stark, more accurate than Hawkeye? Think you have what it takes to join earth's mightiest heros? Sign up today.</p></p>
-                <p>All required fields marked with * are required</p>
+                <p>All fields marked with * are required</p>
                 <div class="input">
                     <label for="firstName">First Name *</label>
                     <input type="text" id="firstName" name="firstName" placeholder='Steve' required>
@@ -42,6 +42,8 @@
             <div class="buttonContainer">
                 <button type="submit">Create Account</button>
             </div>
+
+            <div class="rightFooter">Built and designed by <a href="https://github.com/olsenjames1116">olsenjames1116</a></div>
         </form>
 
         <div class="leftContainer">
