Add logo to logo container

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
         <div class="leftContainer">
             <div class="logoContainer">
+                <img src="./images/logo.png" alt="A logo of the Norse God Odin">
                 Avenger's Initiative
             </div>
             <footer>Photo by <a href="https://unsplash.com/@igorbumba">Igor Bumba</a> on <a href="https://unsplash.com/">Unsplash</a></footer>
